# Calculator_material

./: .gitignore  CMakeList.txt  Calculator - material.sln  README.md
Calculator - material/: App.xaml  App.xaml.cs  Calculator - material.csproj  Calculator - material_TemporaryKey.pfx  Calculator_material.csproj  HelpWindow.xaml  HelpWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
Calculator - material/Docs/: Calculator - material.xml
Calculator - material/Docs/html/: _app_8xaml_8cs.html  _main_window_8xaml_8cs.html  annotated.html  class_calculator______material_1_1_app.html  classes.html  files.html  functions.html  (+8 more)
Calculator - material/Math/: Math.cs
Calculator - material/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Deviation/: Deviation.cs  Deviation.csproj
Deviation/Properties/: AssemblyInfo.cs
MathLibTests/: MathLibTests.csproj  UnitMathTests.cs
MathLibTests/Properties/: AssemblyInfo.cs
plan/: xdvora3k_xkuzel08_xkvasn14_plan.txt
src/: CMakeLists.txt  Calculator - material.sln  Calculator _material.sln  Calculator_material.sln  Makefile
src/Calculator - material/: App.xaml  Calculator_material.csproj  MainWindow.xaml.cs
src/Calculator - material/Properties/: Resources.Designer.cs  Settings.Designer.cs
src/Calculator_material/: App.xaml.cs  Calculator_material.csproj  MainWindow.xaml
src/Calculator_material/Properties/: AssemblyInfo.cs
src/Calculator_material/xml/: Calculator - material.xml  Calculator_material.xml
src/CustomDLLs/: CMakeLists.txt  cmake_install.cmake  mylib.csproj
src/MathLibTests/: MathLibTests.csproj  UnitMathTests.cs
src/MathLibTests/Properties/: AssemblyInfo.cs
src/MathLibTests/xml/: MathLibTests.xml
src/Mathematics/: Math.cs  Mathematics.csproj  Mathematics.sln  Mathematics.sln~HEAD  Mathematics.sln~J2
src/Mathematics/Properties/: AssemblyInfo.cs
src/Mathematics/xml/: Mathematics.xml
src/Profiling/: Profiling.csproj  Profiling.sln  Program.cs
src/Profiling/Properties/: AssemblyInfo.cs
src/Profiling/xml/: Profiling.xml
src/Sandcastle_project/: Calculator.shfbproj
(+28 files in other folders)
